[package]
name = "octets"
version = "0.3.0"
authors = ["Alessandro Ghedini <alessandro@ghedini.me>"]
edition = "2018"
publish = false
description = "Zero-copy abstraction for parsing and constructing network packets"
repository = { workspace = true }
keywords = ["quic", "http3"]
categories = ["network-programming"]
license = "BSD-2-Clause"
